refactor: add pagination, rename typo in security directory